tdf#107512 sw: fix rollback of text attributes in SwUndoDelete

The problem is that in SwUndoDelete::UndoImpl(), first the formatting
attributes are restored via TmpRollback(), and then all footnote/fly
attributes are restored via Rollback(). This means that the SwHistory
doesn't actually store the original positions of the formatting hints;
ideally there wouldn't be 2 separate steps here, but that appears
difficult to change now given the plethora of calls to
DelContentIndex() ...

So work around the problem by adding a new SetAttrMode::NOHINTEXPAND
to prevent expanding the existing hints when the CH_TXTATR_BREAKWORD
are inserted from SwUndoDelLayFormat.

This fixes 2 problematic cases: at the start of the paragraph,
and if the hint ends at the position before the CH_TXTATR_BREAKWORD.

Let's hope this won't break anything anybody cares about.

(cherry picked from commit 771d85baf18e5b503eb6248e1f41928b00265d8d)

sw: CPPUNIT_ASSERT_EQUAL vs. integer FAIL
(cherry picked from commit 7f44ca113170a641a1aecc8a48e2b99860e1e2f7)

Change-Id: I557c4c9136f4225ca502019730fb9f0a9c03d23b